modules/cli/src/test/resources/good/wfchoice/globals/gdo/params/Test01.scr
module good.wfchoice.globals.gdo.params.Test01;


global protocol Foo<sig M1>(role A, role B)
{
	choice at A
	{
		M1 from A to B;
	}
	or
	{
		do Bar<1()>(A, B);
	}
}

global protocol Bar<sig M2>(role C, role D)
{
	M2 from C to D;
}

