modules/cli/src/test/resources/bad/syntax/disamb/doarglistdel/DoArgList06.scr
module bad.syntax.disamb.doarglist.DoArgList06;


global protocol Foo(role A, role B)
{
	1() from A to B;
	do Bar(A, B);
}

global protocol Bar<sig M1>(role C, role D)
{
	M1 from C to D;
}
